--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 
-input,
+#html-input-file,
 button {
   margin: 10px;
 }
@@ -61,3 +61,4 @@ button:not(:disabled):focus {
   font-size: 16px;
   resize: none;
 }
+
