--- a/style.css
+++ b/style.css
@@ -48,17 +48,23 @@ button:not(:disabled):focus {
   background: #360202de;
 }
 
-
-#searchTerms {
-  margin-top: 10px;
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  font-size: 16px;
-  resize: none;
+textarea {
+margin-top: 10px;
+width: 100%;
+height: 150px;
+padding: 12px 20px;
+box-sizing: border-box;
+border: 2px solid #ccc;
+border-radius: 4px;
+background-color: #f8f8f8;
+font-size: 16px;
+resize: none;
 }
 
+.container-two {
+  display: flex;
+}
+
+#parentArea, #childArea {
+  margin: 4px
+}
